--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
     background-color: #F1F2F2;
     padding: 0 5%;
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
 }
 
 div {
@@ -9,23 +10,29 @@ div {
     margin: 0 auto;
     border-radius: 5px;
     margin-top: 10%;
+
+}
+
+body > div {
+    width: 95%;
     margin-bottom: 10%;
-
 }
 
-div#main {
-        width: 70%;
-
-}
-
-div #top {
+body div div {
     background-color: #7B77C9;
     border-bottom: 4px solid #666;
+    border-radius: 5px 5px 0 0;
+}
+
+#movedown{
+    background-color: #fff;
+    border-bottom: none;
+    border-radius: none;
+    margin-top: 45px;
 }
 
 h1 {
     color: #fff;
-    font-family: 'Open Sans', sans-serif;
     font-size: 2.2em;
     text-align: center;
     margin: 0 auto;
@@ -42,7 +49,20 @@ input {
 }
 
 h3 {
-    font-family: 'Open Sans', sans-serif;
+    color: #666;
+
+}
+
+#yourguess {
+    color: #666;
+    font-size: .85em;
+    line-height: 0;
+    margin-bottom: 20px;
+    display: none;
+}
+
+#hotcold {
+    display: none;
     color: #666;
 }
 
@@ -69,6 +89,7 @@ h3 {
     border-top: solid 1px #50D125;
     border-left: solid 1px #50D125;
 }
+
 #hint {
     margin-right: -2px;
 }
@@ -78,7 +99,6 @@ h3 {
 }
 
 #hint, #restart {
-    font-family: 'Open Sans', sans-serif;
     font-size: .75em;
     text-decoration: none;
     color: #B2B0B4;
@@ -91,8 +111,7 @@ h3 {
     margin-bottom: 40px;
 }
 
-button#guess {
-    font-family: 'Open Sans', sans-serif;
+#guess {
     text-decoration: none;
     color: #fff;
     padding: 10px 20px;
@@ -101,3 +120,41 @@ button#guess {
 }
 
 
+@-webkit-keyframes blackWhite {
+  0% { background-color: #7B77C9; }
+  50% { background-color: #7B77C9; }
+  51% { background-color: #FACA4F; }
+  100% { background-color: #FACA4F; }
+}
+
+@-webkit-keyframes blackWhiteFade {
+  0% { background-color: #7B77C9; }
+  50% { background-color: #FACA4F; }
+  100% { background-color: #7B77C9; }
+}
+
+.blinkdiv {
+    border-radius: 5px 5px 0 0;
+    background-color: #FACA4F;
+  /*-webkit-animation-name: blackWhite;*/
+   -webkit-animation-name: blackWhiteFade;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 0.3s;
+}
+
+
+@media screen and (min-width: 480px){
+    body > div {
+    width: 90%;
+    margin-bottom: 10%;
+}
+
+}
+
+@media screen and (min-width: 755px){
+    body > div {
+    width: 55%;
+    margin-bottom: 10%;
+}
+
+}
